Correct a little bug, the widht of the grid card. Beacuse bfeore was too small.

--- a/2. proyects/portafolio/styles.css
+++ b/2. proyects/portafolio/styles.css
@@ -274,6 +274,7 @@ section {
     justify-content: left;
     cursor: pointer;
     transition: 0.2s ease-in-out;
+    width: 350px;
 }
 
 .grid-card:hover {
